# lmxd-python

./: README.md  config.py  lxdm-gpt2.ipynb  main.py  pyproject.toml  requirements.txt
Model/: dataset.py  utils.py
Model/donut/: dataset.py  finetune.py  utils.py
Model/gpt2/: utils.py
datasets/: utils.py
datasets/floorplan/: ocr.py  preprocess.py  utils.py
datasets/schemas/: document.py
datasets/sorie/: post_processing.py  utils.py
runner/: fineutne.py
scripts/: convert_toml_to_req.py  ocr_runner.py
