[tool.poetry]
name = "lmxd"
version = "0.1.0"
description = "repo for implementing lmxd implementation"
authors = ["Ishant Aggarwal <iagg1946@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
pydantic-core = "^2.14.6"
numpy = "^1.21.0"
matplotlib = "^3.3.2"
opencv-python = "^4.4.0.46"
scikit-image = "^0.22.0"
pytesseract = "^0.3.7"
tqdm = "^4.66.2"
paddleocr = "^2.7.0.3"
paddlepaddle = "^2.6.1"
torch = "^2.2.1"
transformers = "^4.38.2"
accelerate = "^0.28.0"
sentencepiece = "^0.2.0"
anls = "^0.0.2"
pyqt6 = "^6.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
